# imitation

./: Makefile.am  configure.ac  guix.scm  imitation.scm  meson-parser.scm  meson.build  meson_options.txt
imitation/: configuration.scm.in  languages.scm  utils.scm
language/meson/: bindings.scm  parse.scm  spec.scm
language/meson/bindings/: variables.scm
meson/: compiler.scm  function.scm  meson.build  types.scm
meson/compiler/: c.scm  cpp.scm
meson/module/: fs.scm  gnome.scm  pkgconfig.scm
tests/meson/: eval.scm  read.scm
