# SPDX-License-Identifier: LGPL-2.1-or-later
##
project('systemd', 'c',
        version : '254',
        license : 'LGPLv2+',
        default_options: [
                'c_std=gnu11',
                'prefix=/usr',
                'sysconfdir=/etc',
                'localstatedir=/var',
                'warning_level=2',
        ],
        meson_version : '>= 0.60.0',
       )
warning('sdfdsf',[1 ,2],'end')
set_variable('bb', 2)
unset_variable('bb')
c=20
